--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,7 @@
 				<img class="loader" src="img/loader.gif">
 				<div class="fileUpload btn btn-primary">
 					<span>Choose Image</span>
-					<input type="file" class="upload" name="image"/>
+					<input type="file" class="upload" name="image" accept="image/*"/>
 				</div>
 			</div>
 			<div class="right">
@@ -122,7 +122,7 @@
 								</div>		
 							</div>
 							<div class="row controls">
-					      <div class="input-group col-sm-5">
+					      <div class="input-group col-md-5 col-sm-6">
 					        <input class="form-control" type="text" value="" placeholder="" name="q">
 					        <div class="input-group-btn">
 					          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="mydropdowndisplay">Letter</span> <span class="caret"></span></button>
@@ -133,13 +133,13 @@
 					          <input type="hidden" id="mydropwodninput" name="category">
 					        </div>
 					      </div>
-								<div class="col-sm-2 add-button">
+								<div class="col-md-2 col-sm-6 add-button">
 									<button type="button" class="btn btn-primary">Add</button>
 								</div>
-								<div class="col-sm-2 add-button">
+								<div class="col-md-2 col-sm-6 add-button">
 									<button type="button" class="btn btn-danger">Delete</button>
 								</div>
-								<div class="col-sm-2 add-button">
+								<div class="col-md-2 col-sm-6 add-button">
 									<button type="button" class="btn btn-default" id="mergeButton" disabled="disabled">Merge</button>
 								</div>
 							</div>
