Ajout communication client-serveur

--- a/client/index.html
+++ b/client/index.html
@@ -124,7 +124,7 @@
 							<div class="row controls">
 								<div class="row @">
 									<div class="input-group col-md-6 col-sm-6 col-md-offset-2">
-						        <input class="form-control" type="text" value="" placeholder="" name="q">
+						        <input id="letter" class="form-control" type="text" value="" placeholder="" name="q">
 						        <div class="input-group-btn">
 						          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="mydropdowndisplay">Letter</span> <span class="caret"></span></button>
 						          <ul class="dropdown-menu" id="mydropdownmenu">
@@ -135,7 +135,7 @@
 						        </div>
 						      </div>
 									<div class="col-md-2 col-sm-6 add-button">
-										<button type="button" class="btn btn-primary">Save</button>
+										<button type="button" class="btn btn-primary" id="save">Save</button>
 									</div>
 								</div>
 								<div class="row">
