--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Pdp client</title>
 	<link href="css/style.css" rel="stylesheet">
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js" ></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" ></script>
+	<script type="text/javascript" src="js/jquery.min.js" ></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		$(function() {
 	    $("#canvas").hide();
@@ -138,7 +138,7 @@
 										<button type="button" class="btn btn-primary" id="save">Save</button>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row controle">
 									<div class="col-md-2 col-sm-6 add-button col-md-offset-4">
 										<button type="button" class="btn btn-default" id="mergeButton" disabled="disabled">Merge</button>
 									</div>
