--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<a href="#"><span class="glyphicon glyphicon-export" aria-hidden="true"></span></a>
+						<a href="#"><span id="button_export" class="glyphicon glyphicon-export" aria-hidden="true"></span></a>
 					</li>
 					<li>
 
