--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,26 @@
 	
 </head>
 <body class="fill-height">
+	
+	<div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+	  <div class="modal-dialog modal-sm">
+		  <div class="modal-content">
+		  	<div class="modal-header">
+			    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			    <h4 class="modal-title">Export font</h4>
+			  </div>
+		    <div class="modal-body">
+		      <input class="form-control" id="fontName" type="text" data-tabindex="1" placeholder="font name">
+		    </div>
+		    <div class="modal-footer">
+			    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+			    <button type="button" id="exportFont" class="btn btn-primary">Export</button>
+			  </div>
+		  </div>
+	  </div>
+	</div>
+
+
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -38,7 +58,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<a href="#"><span id="button_export" class="glyphicon glyphicon-export" aria-hidden="true"></span></a>
+						<a data-toggle="modal" href="#" data-target="#saveModal"><span id="button_export" class="glyphicon glyphicon-export" aria-hidden="true"></span></a>
 					</li>
 					<li>
 
@@ -262,6 +282,9 @@
 
 	<div class="made_with">
 		Made with <a href="https://github.com/titi38/libnavajo">libnavajo</a>
+	</div>
+
+
 	</div>
 	<script type="text/javascript" src="js/session.js"></script>
 	<script type="text/javascript" src="js/init.js" ></script>
