--- a/client/index.html
+++ b/client/index.html
@@ -111,7 +111,7 @@
 								  		<label class="sr-only" for="up"></label>
 									    <div class="input-group">
 									      <div class="input-group-addon">Up</div>
-									      <input type="number" class="form-control" step="0.1" id="up">
+									      <input type="number" class="form-control" id="up">
 									    </div>
 								  	</div> 
 								  </div>
@@ -120,7 +120,7 @@
 								    <div class="input-group">
 
 								      <div class="input-group-addon">Down</div>
-								      <input type="number" class="form-control" step="0.1" id="down">
+								      <input type="number" class="form-control" id="down">
 								    </div>
 								  </div>
 								</div>		
@@ -129,14 +129,14 @@
 								    <label class="sr-only" for="left"></label>
 								    <div class="input-group">
 								      <div class="input-group-addon">Left</div>
-								      <input type="number" class="form-control" step="0.1" id="left">
+								      <input type="number" class="form-control" id="left">
 								    </div>
 								  </div>
 								  <div class="form-group col-sm-5 modif-line-value">
 								    <label class="sr-only" for="up"></label>
 								    <div class="input-group">
 								      <div class="input-group-addon">Right</div>
-								      <input type="number" class="form-control" step="0.1" id="right">
+								      <input type="number" class="form-control" id="right">
 								    </div>
 								  </div>
 								</div>		
@@ -183,94 +183,7 @@
 						</div>
 					</div>
 					<div class="right_down">
-						<ul class="row letter-list">
-							<li class="col-sm-15">A <span class="pull-right letter-number">45</span></li>
-							<li class="col-sm-15">F <span class="pull-right letter-number">67</span></li>
-							<li class="col-sm-15">Q <span class="pull-right letter-number">33</span></li>
-							<li class="col-sm-15">P <span class="pull-right letter-number">35</span></li>
-							<li class="col-sm-15">311C <span class="pull-right letter-number">4</span></li>
-							<li class="col-sm-15">V <span class="pull-right letter-number">56</span></li>
-							<li class="col-sm-15">36BE <span class="pull-right letter-number">3</span></li>
-							<li class="col-sm-15">G <span class="pull-right letter-number">9</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">R <span class="pull-right letter-number">84</span></li>
-							<li class="col-sm-15">F <span class="pull-right letter-number">4</span></li>
+						<ul class="row letter-list" id="letter-list">
 						</ul>
 					</div>
 					
@@ -286,6 +199,8 @@
 
 
 	</div>
+	<script type="text/javascript" src="js/Blob.js"></script>
+	<script type="text/javascript" src="js/FileSaver.js"></script>
 	<script type="text/javascript" src="js/session.js"></script>
 	<script type="text/javascript" src="js/init.js" ></script>
 	<script type="text/javascript" src="js/manipulate_canvas.js" ></script>
