début traitement baseline client

--- a/client/index.html
+++ b/client/index.html
@@ -201,6 +201,7 @@
 	</div>
 	<script type="text/javascript" src="js/Blob.js"></script>
 	<script type="text/javascript" src="js/FileSaver.js"></script>
+	<script type="text/javascript" src="js/settings.js"></script>
 	<script type="text/javascript" src="js/session.js"></script>
 	<script type="text/javascript" src="js/init.js" ></script>
 	<script type="text/javascript" src="js/manipulate_canvas.js" ></script>
