Modification de la baseline

--- a/client/index.html
+++ b/client/index.html
@@ -89,14 +89,14 @@
 			<div class="right">
 				<div class="container_right">
 					<div class="right_up">
-						<div class="button_nav_cc row">
+						<!-- <div class="button_nav_cc row">
 							<div class="col-md-3">
 								<button class="buttonPrevious btn btn-default">Previous</button>
 							</div>
 							<div class="col-md-3 col-md-offset-6">
 								<button class="buttonNext btn btn-default">Next</button>
 							</div>		
-						</div>
+						</div> -->
 						
 						<div class="small-canvas">
 							<div class="content">
@@ -137,6 +137,15 @@
 								    <div class="input-group">
 								      <div class="input-group-addon">Right</div>
 								      <input type="number" class="form-control" id="right">
+								    </div>
+								  </div>
+								</div>
+								<div class="row">
+								  <div class="form-group col-sm-5 col-sm-offset-3 modif-line-value">
+								    <label class="sr-only" for="baselineCC"></label>
+								    <div class="input-group">
+								      <div class="input-group-addon">Baseline</div>
+								      <input type="number" class="form-control" id="baselineCC">
 								    </div>
 								  </div>
 								</div>		
