--- a/client/index.html
+++ b/client/index.html
@@ -1,219 +1,139 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Pdp client</title>
-	<link href="css/style.css" rel="stylesheet">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/normalize.css" rel="stylesheet">
+<html lang="en"><head>
+<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<title>Labri's font software suite</title>
 
-	<script type="text/javascript" src="js/jquery.min.js" ></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script type="text/javascript">
-		$(function() {
-	    $("#canvas").hide();
-	    $('.container_right').hide();
-	    $('.loader').hide();
-		});
-	</script>
-	
-	
-</head>
-<body class="fill-height">
-	
-	<div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-	  <div class="modal-dialog modal-sm">
-		  <div class="modal-content">
-		  	<div class="modal-header">
-			    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			    <h4 class="modal-title">Export font</h4>
-			  </div>
-		    <div class="modal-body">
-		      <input class="form-control" id="fontName" type="text" data-tabindex="1" placeholder="font name">
-		    </div>
-		    <div class="modal-footer">
-			    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
-			    <button type="button" id="exportFont" class="btn btn-primary">Export</button>
-			  </div>
-		  </div>
-	  </div>
-	</div>
+<!-- Google fonts -->
+<link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+
+<!-- font awesome -->
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+<!-- bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#">FONT EXTRACTOR</a>
-			</div>
 
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href="#">
-							<label>
-								<input type="checkbox" id="baseline">  Show Baseline
-							</label>
-						</a>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a data-toggle="modal" href="#" data-target="#saveModal"><span id="button_export" class="glyphicon glyphicon-export" aria-hidden="true"></span></a>
-					</li>
-					<li>
+<link rel="stylesheet" href="css/style_index.css">
 
-						<a href="#popup" data-toggle="modal" data-target=".bs-example-modal-sm"><span class="glyphicon glyphicon-plus" id="button_trash" aria-hidden="true"></span></a>
+<body>
 
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<div class="processing">
-		<div class="inside">
+<!-- Header Starts -->
+<div class="navbar-wrapper">
 
-			<div class="left">
-				<div class="zoom-icon">
-					<span class="glyphicon glyphicon-zoom-in" id="zoom-in"></span><br>
-					<span class="glyphicon glyphicon-zoom-out" id="zoom-out"></span><br>
-					<span class="glyphicon glyphicon-repeat" id="zoom-reset"></span>
-				</div>
-
-				<canvas id="canvas" width="500" height="500" data-girar="0"></canvas>
-				<img class="loader" src="img/loader.gif">
-				<div class="fileUpload btn btn-primary">
-					<span>Choose Image</span>
-					<input type="file" class="upload" name="image" accept="image/*"/>
-				</div>
-			</div>
-			<div class="right">
-				<div class="container_right">
-					<div class="right_up">
-						<!-- <div class="button_nav_cc row">
-							<div class="col-md-3">
-								<button class="buttonPrevious btn btn-default">Previous</button>
-							</div>
-							<div class="col-md-3 col-md-offset-6">
-								<button class="buttonNext btn btn-default">Next</button>
-							</div>		
-						</div> -->
-						
-						<div class="small-canvas">
-							<div class="content">
-								<canvas id="small_canvas" data-girar="500"></canvas>
-							</div> 
-						</div>
-						<div class="container_option_base" id="letter_options">
-							<div class="field_modification_base">
-								<div class="row">
-								  <div class="form-group col-sm-5 col-sm-offset-1 modif-line-value">
-								  	<div class="group">
-								  		<label class="sr-only" for="up"></label>
-									    <div class="input-group">
-									      <div class="input-group-addon">Up</div>
-									      <input type="number" class="form-control" id="up">
-									    </div>
-								  	</div> 
-								  </div>
-								  <div class="form-group col-sm-5 modif-line-value">
-								    <label class="sr-only" for="down"></label>
-								    <div class="input-group">
-
-								      <div class="input-group-addon">Down</div>
-								      <input type="number" class="form-control" id="down">
-								    </div>
-								  </div>
-								</div>		
-								<div class="row">
-								  <div class="form-group col-sm-5 col-sm-offset-1 modif-line-value">
-								    <label class="sr-only" for="left"></label>
-								    <div class="input-group">
-								      <div class="input-group-addon">Left</div>
-								      <input type="number" class="form-control" id="left">
-								    </div>
-								  </div>
-								  <div class="form-group col-sm-5 modif-line-value">
-								    <label class="sr-only" for="up"></label>
-								    <div class="input-group">
-								      <div class="input-group-addon">Right</div>
-								      <input type="number" class="form-control" id="right">
-								    </div>
-								  </div>
-								</div>
-								<div class="row">
-								  <div class="form-group col-sm-5 col-sm-offset-3 modif-line-value">
-								    <label class="sr-only" for="baselineCC"></label>
-								    <div class="input-group">
-								      <div class="input-group-addon">Baseline</div>
-								      <input type="number" class="form-control" id="baselineCC">
-								    </div>
-								  </div>
-								</div>		
-							</div>
-							<div class="row controls">
-								<div class="row @">
-									<div class="input-group col-md-6 col-sm-6 col-md-offset-2">
-						        <input id="letter" class="form-control" type="text" value="" placeholder="" name="q">
-						        <div class="input-group-btn">
-						          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="mydropdowndisplay">Letter</span> <span class="caret"></span></button>
-						          <ul class="dropdown-menu" id="mydropdownmenu">
-						            <li><a href="#">Letter</a></li>
-						            <li><a href="#">Unicode</a></li>
-						          </ul>
-						          <input type="hidden" id="mydropwodninput" name="category">
-						        </div>
-						      </div>
-									<div class="col-md-2 col-sm-6 add-button">
-										<button type="button" class="btn btn-primary" id="save">Save</button>
-									</div>
-								</div>
-								<div class="row controle">
-									<div class="col-md-2 col-sm-6 add-button col-md-offset-4">
-										<button type="button" class="btn btn-default" id="mergeButton" disabled="disabled">Merge</button>
-									</div>
-									<div class="col-md-2 col-sm-6 add-button">
-										<button type="button" class="btn btn-default" id="mergeButton" disabled="disabled">Split</button>
-									</div>
-								</div>
-							</div>
-
-						</div>
-						<div class="container_option_base" id="baseline_options">
-							<div class="form-group col-sm-6 modif-line-value col-sm-offset-2">
-							    <label class="sr-only" for="baseline"></label>
-							    <div class="input-group">
-							      <div class="input-group-addon">Baseline</div>
-							      <input type="number" class="form-control" id="baselineValue">
-							    </div>
-							  </div>
-							  <div class="col-md-2 col-sm-6 add-button">
-									<button type="button" class="btn btn-primary" id="saveBaseline">Save</button>
-								</div>
-						</div>
-					</div>
-					<div class="right_down">
-						<ul class="row letter-list" id="letter-list">
-						</ul>
-					</div>
-					
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="made_with">
-		Made with <a href="https://github.com/titi38/libnavajo">libnavajo</a>
-	</div>
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="top-nav">
+          <div class="container">
+            <div class="navbar-header">
+              <!-- Logo Starts -->
+              <a class="navbar-brand" href="#home">Labri's font software suite</a>
+              <!-- #Logo Ends -->
 
 
-	</div>
-	<script type="text/javascript" src="js/Blob.js"></script>
-	<script type="text/javascript" src="js/FileSaver.js"></script>
-	<script type="text/javascript" src="js/settings.js"></script>
-	<script type="text/javascript" src="js/session.js"></script>
-	<script type="text/javascript" src="js/init.js" ></script>
-	<script type="text/javascript" src="js/manipulate_canvas.js" ></script>
-	<script type="text/javascript" src="js/upload_file.js" ></script>
-</body>
-</html>
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+
+            </div>
+
+
+            <!-- Nav Starts -->
+            <div class="navbar-collapse  collapse">
+              <ul class="nav navbar-nav navbar-right scroll">
+                 <li class="active"><a href="#home">HOME</a></li>
+                 <li><a href="#doc_creator">DOC-CREATOR</a></li>
+                 <li><a href="#font_extractor">FONT-EXTRACTOR</a></li>              
+              </ul>
+            </div>
+            <!-- #Nav Ends -->
+
+          </div>
+        </div>
+
+      </div>
+<!-- #Header Starts -->
+
+
+
+
+<div class="container"><div class="wrapper"> 
+
+
+<div class="banner">
+<div class="overlay">
+
+<!-- main banner-->
+<h1 class="text-center">Software suite for font manipulation</h1>
+<!-- main banner-->
+
+</div>
+</div>
+
+<!-- works -->
+<div id="doc_creator" class="works">
+  <div class="row">
+ 
+  <div class="col-sm-5 wowload fadeInLeft animated" style="visibility: visible; animation: fadeInLeft; -webkit-animation: fadeInLeft;">
+  <div class="spacer"><h2><i class="fa fa-file"></i> <a href="http://doc-creator.labri.fr/">DOCUMENT-CREATOR</a></h2>
+  <p>DOCUMENT-CREATOR is an application to generate sythetic document images</p>
+    <p>has been developed by J. Albouys- Perrois, J.P. Domenger, N. Journet, V.C. Kieu, B. Mansencal, R. Mullot, V. Rabeux, N. Vidal, M. Visani</p>
+    <p>
+
+    </p>
+  </div>
+  </div>
+
+   <div class="col-sm-7 wowload fadeInRight animated" style="visibility: visible; animation: fadeInRight; -webkit-animation: fadeInRight;">
+    <div id="works" class="slide">
+    <div class="inner" role="listbox">
+     <div class="item "><img src="img/doc-creator.png" class="img-responsive"></div>
+    </div>    
+    </div>
+  </div>
+  </div>  
+</div>
+<!-- works -->
+
+<!-- works -->
+<div id="font_extractor" class="works">
+
+  <div class="row">
+  <div class="col-sm-7 wowload fadeInRight animated" style="visibility: visible; animation: fadeInRight; -webkit-animation: fadeInRight;">
+    <div id="works" class="slide">
+    <div class="inner" role="listbox">
+     <div class="item "><img src="img/font-extractor.png" class="img-responsive"></div>
+    </div>    
+    </div>
+  </div>
+  <div class="col-sm-5 wowload fadeInLeft animated" style="visibility: visible; animation: fadeInLeft; -webkit-animation: fadeInLeft;">
+  <div class="spacer"><h2><i class="fa fa-font"></i> <a href="fontextractor.html">FONT EXTRACTOR</a></h2>
+  <p>Font extractor is an application to extract font from images</p>
+    <p>has been developed by T.Autret, A.Boschet, T.Labrousse, R.Tisné </p>
+  </div>
+  </div>
+  </div>  
+</div>
+<!-- works -->
+
+<!-- Footer Starts -->
+<div class="footer text-center">
+<a href="http://www.labri.fr">Labri - &copy; 2016</a>
+</div>
+
+</div>
+</div>
+
+<!-- jquery -->
+<script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
+
+
+<!-- boostrap -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+
+
+
+</body></html>
