--- a/client/index.html
+++ b/client/index.html
@@ -112,7 +112,8 @@
   <div class="col-sm-5 wowload fadeInLeft animated" style="visibility: visible; animation: fadeInLeft; -webkit-animation: fadeInLeft;">
   <div class="spacer"><h2><i class="fa fa-font"></i> <a href="fontextractor.html">FONT EXTRACTOR</a></h2>
   <p>Font extractor is an application to extract font from images</p>
-    <p>has been developed by T.Autret, A.Boschet, T.Labrousse, R.Tisné </p>
+    <p>has been developed by <a href="mailto:tristan.autret@etu.u-bordeaux.fr">T.Autret</a>, <a href="mailto:anthony.boschet@etu.u-bordeaux.fr">A.Boschet</a>, <a href="mailto:thomas.labrousse@etu.u-bordeaux.fr">T.Labrousse</a>,<a href="mailto:romain.tisne@etu.u-bordeaux.fr"> R.Tisné </a></p>
+    <p>Made with <a href="https://github.com/titi38/libnavajo/">libnavajo</a> and <a href="http://opencv.org">OpenCV</a>
   </div>
   </div>
   </div>  
